--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "version": "4.2.0"
   },
   "dependencies": {
+    "acorn": "^7.3.1",
+    "clean-css": "^4.2.3",
+    "constantinople": "^4.0.1",
     "hexo": "^4.0.0",
     "hexo-deployer-git": "^2.1.0",
     "hexo-generator-archive": "^1.0.0",
@@ -27,6 +30,7 @@
     "hexo-server": "^1.0.0",
     "hexo-wordcount": "^6.0.1",
     "leancloud-storage": "^4.2.0",
+    "minimist": "^1.2.5",
     "valine": "^1.3.10"
   }
 }
