--- a/package.json
+++ b/package.json
@@ -12,25 +12,27 @@
     "version": "4.2.0"
   },
   "dependencies": {
-    "acorn": "^7.3.1",
-    "clean-css": "^4.2.3",
+    "acorn": "^8.2.0",
+    "clean-css": "^5.1.2",
     "constantinople": "^4.0.1",
     "hexo": "^5.4.0",
     "hexo-deployer-git": "^3.0.0",
     "hexo-generator-archive": "^1.0.0",
     "hexo-generator-category": "^1.0.0",
     "hexo-generator-index-pin-top": "^0.2.2",
-    "hexo-generator-search": "^2.4.0",
+    "hexo-generator-search": "^2.4.2",
     "hexo-generator-tag": "^1.0.0",
-    "hexo-offline": "^1.0.0",
+    "hexo-offline": "^2.0.0",
     "hexo-renderer-ejs": "^1.0.0",
-    "hexo-renderer-jade": "^0.5.0",
-    "hexo-renderer-marked": "^2.0.0",
-    "hexo-renderer-stylus": "^1.1.0",
-    "hexo-server": "^1.0.0",
+    "hexo-renderer-jade": "^0.3.0",
+    "hexo-renderer-marked": "^4.0.0",
+    "hexo-renderer-stylus": "^2.0.1",
+    "hexo-server": "^2.0.0",
     "hexo-wordcount": "^6.0.1",
-    "leancloud-storage": "^4.2.0",
+    "leancloud-storage": "^4.10.1",
     "minimist": "^1.2.5",
-    "valine": "^1.3.10"
+    "pug": "^3.0.2",
+    "transformers": "^1.8.3",
+    "valine": "^1.4.14"
   }
 }
